refactor: limpieza general de servicios y correcciones de revisión y QA funcional
Refactor: lógica de negocio movida de controladores a servicios nuevos
(AlertaService, DashboardService, PlanificadorService), eliminación de
inyección de repositorios en controladores, @Transactional reubicado en
servicios, jerarquía de excepciones simplificada (ErpException), entidades
modernizadas con pattern matching y 19 servicios/7 repositorios muertos
eliminados.

Correcciones detectadas en revisión de código y QA manual de los 22 módulos:
- ContabilidadService: cerrarEjercicio no compilaba (getAsientoCierre) y
  creaba el asiento de cierre sin número (NOT NULL único)
- PedidoVentaWebController: restaurado el cálculo del total desde líneas
  (con descuento) cuando el total almacenado es 0
- PedidoCompra: total con valor por defecto 0 — crear desde web fallaba
  siempre por @NotNull sin asignar
- Recepcion/Merma/Devolucion: fetch-joins en listas para evitar
  LazyInitializationException con open-in-view=false
- DevolucionService.save: guard Hibernate.isInitialized para ediciones de
  cabecera con la colección de líneas sin cargar
- recepciones/ver.html: formato numérico 'DOT' inválido → 'POINT'
- pedidos-venta/lista.html: filtro con estados reales del dominio
- WebErrorHandler: parámetro obligatorio ausente devuelve 400, no 500
- favicon: eliminada referencia rota a favicon.ico (se añade favicon.svg)
- DocumentoServiceTest: mock actualizado a la carga en lote findAllById
- .gitignore: capturas de revisión de la raíz y artefactos de Playwright

186 tests en verde.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01NzLSniAqqRymPP5Vzn93Yi