@@ -56,21 +56,21 @@ public class ProveedorService {
     }
 
     public Optional<Proveedor> findByCif(String cif) {
-        if (cif == null || cif.trim().isEmpty()) {
+        if (cif == null || cif.isBlank()) {
             return Optional.empty();
         }
         return proveedorRepository.findByCifIgnoreCase(cif.trim());
     }
 
     public Optional<Proveedor> findByNombreExacto(String nombre) {
-        if (nombre == null || nombre.trim().isEmpty()) {
+        if (nombre == null || nombre.isBlank()) {
             return Optional.empty();
         }
         return proveedorRepository.findFirstByNombreIgnoreCase(nombre.trim());
     }
 
     public List<Proveedor> searchByNombre(String texto) {
-        if (texto == null || texto.trim().isEmpty()) {
+        if (texto == null || texto.isBlank()) {
             return List.of();
         }
         return proveedorRepository.findByNombreContainingIgnoreCase(texto.trim());
@@ -89,7 +89,7 @@ public class ProveedorService {
 
         // Validaciones básicas
         String codigo = proveedor.getCodigo();
-        if (codigo == null || codigo.trim().isEmpty()) {
+        if (codigo == null || codigo.isBlank()) {
             throw new IllegalArgumentException("El código del proveedor es obligatorio");
         }
 
@@ -103,7 +103,7 @@ public class ProveedorService {
         }
 
         // Comprobar duplicado por CIF si se ha introducido
-        if (proveedor.getCif() != null && !proveedor.getCif().trim().isEmpty()) {
+        if (proveedor.getCif() != null && !proveedor.getCif().isBlank()) {
             var optCif = proveedorRepository.findByCif(proveedor.getCif().trim());
             if (optCif.isPresent()) {
                 Proveedor existente = optCif.get();
@@ -190,6 +190,10 @@ public class ProveedorService {
         }
 
         return String.format("PROV%04d", maxNumero + 1);
+    }
+
+    public long count() {
+        return proveedorRepository.count();
     }
 }
 
